# bitbox-online-notation

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.template.yml
api/: Cargo.toml
api/src/: Server.toml  lib.rs
api/src/docs/: mod.rs  swagger_config.rs
api/src/handlers/: admin_handler.rs  authentication_handler.rs  basic_routes_handler.rs  configurations_handler.rs  groups_handler.rs  marks_handler.rs  mod.rs  projects_handler.rs  promotions_handler.rs  students_handler.rs  tokens_handler.rs
api/src/middlewares/: admin.rs  auth.rs
api/src/models/: get_models.rs  mod.rs  post_models.rs  put_models.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/authentication/: codes.rs  mod.rs  password_reset.rs  tokens.rs
application/src/database/: config.rs  done_alerts.rs  groups.rs  marks.rs  mfa_codes.rs  mod.rs  projects.rs  promotions.rs  students.rs  students_tokens.rs  tokens.rs  user_passwords.rs  users.rs
application/src/mail/: init.rs  mod.rs  send.rs
application/src/marks/: calculation.rs  handler.rs  mod.rs
application/src/scheduler/: handler.rs  init.rs  mod.rs
docs/: openapi.json
domain/: Cargo.toml
domain/src/: schema.rs
domain/src/models/: config.rs  done_alerts.rs  groups.rs  marks.rs  mfa_codes.rs  mod.rs  projects.rs  promotions.rs  students.rs  students_tokens.rs  tokens.rs  user_passwords.rs  users.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2024-06-13-210423_users/: down.sql  up.sql
infrastructure/migrations/2024-06-24-054231_promotions/: down.sql  up.sql
infrastructure/migrations/2024-07-03-055344_token/: down.sql  up.sql
infrastructure/migrations/2024-07-03-073532_config/: down.sql  up.sql
infrastructure/migrations/2024-07-09-144302_students/: down.sql  up.sql
infrastructure/migrations/2024-07-10-144715_projects/: down.sql  up.sql
infrastructure/migrations/2024-07-10-151536_groups/: down.sql  up.sql
infrastructure/migrations/2024-07-20-142710_marks/: down.sql  up.sql
infrastructure/migrations/2024-07-23-212717_students_tokens/: down.sql  up.sql
infrastructure/migrations/2024-07-30-143200_done_alerts/: down.sql  up.sql
infrastructure/migrations/2024-08-26-081258_code/: down.sql  up.sql
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: app_config.rs  app_state_model.rs  error_models.rs  lib.rs  post_models.rs  response_models.rs  token_models.rs
web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
web/app/: layout.tsx  not-found.tsx  page.tsx  utils.ts
web/app/api/: models.ts
web/app/api/models/: alert.ts  bad-request-error.ts  forbidden-error.ts  graded-student-post-model.ts  group.ts  internal-error.ts  login-user-post-model.ts  main-config.ts  minimal-group-students.ts  minimal-student.ts  new-group-post-model.ts  new-project-post-model.ts  new-promotion-post-model.ts  new-student-post-model.ts  not-found-error.ts  project-group.ts  project-groups-get-model.ts  project-state.ts  project.ts  promotion-search-params.ts  promotion.ts  register-user-post-model.ts  reset-password-post-model.ts  reset-password-request-post-model.ts  student-group-mark-details.ts  student-group-mark.ts  student-group.ts  student.ts  unauthorized-error.ts  updated-group-put-model.ts  updated-main-config.ts  updated-project-put-model.ts  updated-promotion-put-model.ts  updated-student-put-model.ts  updated-user-config.ts  user-config.ts  validation-error.ts
web/app/components/: NavBar.tsx
web/app/components/data/: GroupComponent.tsx  MinimalStudentComponent.tsx  StudentComponent.tsx
web/app/components/modals/: DeleteStudentModal.tsx  NewGroupModal.tsx  NewProjectModal.tsx  NewStudentModal.tsx
web/app/evaluate/: page.tsx
web/app/evaluate/[id]/: page.tsx
web/app/group/[groupId]/student/[studentId]/: page.tsx
web/app/login/: page.tsx
web/app/login/validate/[id]/: page.tsx
web/app/projects/[id]/: page.tsx
web/app/promotions/[id]/: page.tsx
web/app/register/: page.tsx
