[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }

actix-web={ version = "4.8.0", features = ["secure-cookies", "actix-tls", "openssl"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
dotenvy = "0.15.7"
actix-cors = "0.7.0"
actix-settings = "0.8.0"
actix-tls = "3.4.0"
bcrypt = "0.15.1"
garde = { version = "0.20.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
env_logger = "0.11.3"
futures-util = "0.3.30"
utoipa = { version = "4.2.3", features = ["chrono", "actix_extras", "debug", "serde_yaml", "time", "uuid", "yaml", "openapi_extensions", "preserve_path_order"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web", "debug"] }
utoipauto = "0.1.12"
once_cell = "1.19.0"
regex = "1.10.5"
tokio = "1.38.0"
parking_lot = "0.12.3"