[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "numeric"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
utoipa = { version = "4.2.3", features = ["chrono", "actix_extras", "debug", "serde_yaml", "time", "uuid", "yaml", "openapi_extensions", "decimal"] }