[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
diesel = { version = "2.2.1", features = ["postgres", "uuid", "chrono", "numeric"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
utoipa = { version = "4.2.3", features = ["chrono", "actix_extras", "debug", "serde_yaml", "time", "uuid", "yaml", "openapi_extensions", "decimal"] }
lettre = "0.11.7"
jsonwebtoken = "9.3.0"
indexmap = "2.2.6"
tokio-js-set-interval = "1.3.0"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["full"] }
rand = "0.8.5"
