[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "serde_json"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
utoipa = { version = "4.2.0", features = ["chrono", "time", "uuid"] }
