[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel = { version = "2.2.1", features = ["postgres", "uuid", "chrono", "serde_json"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
utoipa = { version = "4.2.3", features = ["chrono", "time", "uuid"] }
diesel_as_jsonb = "1.0.1"