[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
r2d2 = "0.8.10"
uuid = { version = "1.9.1", features = ["v4"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4.38", features = ["serde"] }