[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

actix-web="4.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
derive_more = "0.99.17"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.5"
garde = { version = "0.19.1", features = ["full", "pattern", "unicode"] }
garde_derive = "0.19.1"
once_cell = "1.19.0"
bcrypt = "0.15.1"
dotenvy = "0.15.7"
utoipa = "4.2.3"