[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

actix-web="4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
derive_more = "0.99.18"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
garde = { version = "0.20.0", features = ["full", "pattern", "unicode"] }
garde_derive = "0.20.0"
bcrypt = "0.15.1"
dotenvy = "0.15.7"
utoipa = "4.2.3"
lettre = "0.11.7"
parking_lot = "0.12.3"